--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,8 +9,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #ffffff; 
+  --foreground: #000000;
   }
 }
 
@@ -18,4 +18,27 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+@keyframes slideRightLeft {
+  0% { transform: translateX(100%); }
+  100% { transform: translateX(-2%); }
+}
+
+.text-slide {
+  animation: slideRightLeft 5s linear infinite;
+}
+.text-dark {
+  color: #2C5F2D; 
+}
+
+.hover\:text-primary:hover {
+  color: #97BC62; 
+}
+
+.bg-primary {
+  background-color: #97BC62; 
+}
+
+.bg-primary-dark {
+  background-color: #2C5F2D; 
 }
